// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tesselate assembles U piece left 1`] = `
[
  3750,
]
`;

exports[`tesselate assembles U piece left 2`] = `
[
  [
    [
      50,
      25,
    ],
    [
      25,
      25,
    ],
    [
      25,
      75,
    ],
    [
      50,
      75,
    ],
    [
      50,
      100,
    ],
    [
      0,
      100,
    ],
    [
      0,
      0,
    ],
    [
      50,
      0,
    ],
  ],
]
`;

exports[`tesselate assembles U piece right 1`] = `
[
  -3750,
]
`;

exports[`tesselate assembles U piece right 2`] = `
[
  [
    [
      50,
      25,
    ],
    [
      75,
      25,
    ],
    [
      75,
      75,
    ],
    [
      50,
      75,
    ],
    [
      50,
      100,
    ],
    [
      100,
      100,
    ],
    [
      100,
      0,
    ],
    [
      50,
      0,
    ],
  ],
]
`;

exports[`tesselate assembles U pieces 1`] = `
[
  1250,
  1250,
]
`;

exports[`tesselate assembles U pieces 2`] = `
[
  [
    [
      50,
      0,
    ],
    [
      100,
      0,
    ],
    [
      100,
      25,
    ],
    [
      50,
      25,
    ],
  ],
  [
    [
      50,
      75,
    ],
    [
      100,
      75,
    ],
    [
      100,
      100,
    ],
    [
      50,
      100,
    ],
  ],
]
`;

exports[`tesselate assembles complex piece 1`] = `
[
  935,
  4,
  450,
  40,
]
`;

exports[`tesselate assembles complex piece 2`] = `
[
  [
    [
      50,
      95,
    ],
    [
      95,
      95,
    ],
    [
      95,
      5,
    ],
    [
      50,
      5,
    ],
    [
      50,
      4,
    ],
    [
      55,
      4,
    ],
    [
      55,
      1,
    ],
    [
      50,
      1,
    ],
    [
      50,
      0,
    ],
    [
      100,
      0,
    ],
    [
      100,
      100,
    ],
    [
      50,
      100,
    ],
  ],
  [
    [
      50,
      2,
    ],
    [
      54,
      2,
    ],
    [
      54,
      3,
    ],
    [
      50,
      3,
    ],
  ],
  [
    [
      50,
      70,
    ],
    [
      70,
      70,
    ],
    [
      70,
      30,
    ],
    [
      50,
      30,
    ],
    [
      50,
      25,
    ],
    [
      75,
      25,
    ],
    [
      75,
      75,
    ],
    [
      50,
      75,
    ],
  ],
  [
    [
      50,
      54,
    ],
    [
      55,
      54,
    ],
    [
      55,
      53,
    ],
    [
      50,
      53,
    ],
    [
      50,
      52,
    ],
    [
      55,
      52,
    ],
    [
      55,
      51,
    ],
    [
      50,
      51,
    ],
    [
      50,
      50,
    ],
    [
      60,
      50,
    ],
    [
      60,
      55,
    ],
    [
      50,
      55,
    ],
  ],
]
`;

exports[`tesselate assembles spiral piece 1`] = `
[
  950,
  450,
  50,
]
`;

exports[`tesselate assembles spiral piece 2`] = `
[
  [
    [
      50,
      95,
    ],
    [
      95,
      95,
    ],
    [
      95,
      5,
    ],
    [
      50,
      5,
    ],
    [
      50,
      0,
    ],
    [
      100,
      0,
    ],
    [
      100,
      100,
    ],
    [
      50,
      100,
    ],
  ],
  [
    [
      50,
      70,
    ],
    [
      70,
      70,
    ],
    [
      70,
      30,
    ],
    [
      50,
      30,
    ],
    [
      50,
      25,
    ],
    [
      75,
      25,
    ],
    [
      75,
      75,
    ],
    [
      50,
      75,
    ],
  ],
  [
    [
      50,
      50,
    ],
    [
      60,
      50,
    ],
    [
      60,
      55,
    ],
    [
      50,
      55,
    ],
  ],
]
`;

exports[`tesselate cut polygon 1`] = `
[
  [
    729,
  ],
]
`;

exports[`tesselate cut polygon 2`] = `
[
  [
    [
      [
        22,
        25,
      ],
      [
        25,
        25,
      ],
      [
        25,
        20,
      ],
      [
        22,
        20,
      ],
      [
        22,
        10,
      ],
      [
        50,
        10,
      ],
      [
        40,
        40,
      ],
      [
        22,
        46,
      ],
    ],
  ],
]
`;

exports[`tesselate cut polygon beside hole 1`] = `
[
  [
    1116,
    -25,
    -5,
    -5,
  ],
]
`;

exports[`tesselate cut polygon beside hole 2`] = `
[
  [
    [
      [
        12,
        10,
      ],
      [
        50,
        10,
      ],
      [
        40,
        40,
      ],
      [
        12,
        49,
      ],
    ],
    [
      [
        20,
        20,
      ],
      [
        20,
        25,
      ],
      [
        25,
        25,
      ],
      [
        25,
        20,
      ],
    ],
    [
      [
        18,
        20,
      ],
      [
        18,
        25,
      ],
      [
        19,
        25,
      ],
      [
        19,
        20,
      ],
    ],
    [
      [
        16,
        20,
      ],
      [
        16,
        25,
      ],
      [
        17,
        25,
      ],
      [
        17,
        20,
      ],
    ],
  ],
]
`;

exports[`tesselate cuts U 1`] = `
[
  [
    [
      50,
      0,
    ],
    [
      100,
      0,
    ],
    [
      100,
      25,
    ],
    [
      50,
      25,
    ],
  ],
  [
    [
      50,
      75,
    ],
    [
      100,
      75,
    ],
    [
      100,
      100,
    ],
    [
      50,
      100,
    ],
  ],
]
`;

exports[`tesselate cuts U left with multiple vertices on edge 1`] = `
[
  [
    [
      50,
      75,
    ],
    [
      100,
      75,
    ],
    [
      100,
      100,
    ],
    [
      50,
      100,
    ],
  ],
]
`;

exports[`tesselate cuts U right with multiple vertices on edge 1`] = `
[
  [
    [
      50,
      75,
    ],
    [
      100,
      75,
    ],
    [
      100,
      100,
    ],
    [
      50,
      100,
    ],
  ],
]
`;

exports[`tesselate cuts ring left 1`] = `
[
  [
    [
      50,
      0,
    ],
    [
      100,
      0,
    ],
    [
      100,
      100,
    ],
    [
      50,
      100,
    ],
  ],
]
`;

exports[`tesselate cuts ring on vertex left 1`] = `
[
  [
    [
      50,
      0,
    ],
    [
      100,
      0,
    ],
    [
      100,
      100,
    ],
    [
      50,
      100,
    ],
  ],
]
`;

exports[`tesselate cuts ring on vertex right 1`] = `
[
  [
    [
      50,
      100,
    ],
    [
      0,
      100,
    ],
    [
      0,
      0,
    ],
    [
      50,
      0,
    ],
  ],
]
`;

exports[`tesselate cuts ring right 1`] = `
[
  [
    [
      50,
      100,
    ],
    [
      0,
      100,
    ],
    [
      0,
      0,
    ],
    [
      50,
      0,
    ],
  ],
]
`;

exports[`tesselate does not insert duplicate vertices 1`] = `
[
  [
    [
      [
        0,
        0,
      ],
      [
        10,
        0,
      ],
      [
        10,
        10,
      ],
      [
        0,
        10,
      ],
    ],
  ],
]
`;

exports[`tesselate does not insert duplicate vertices 2`] = `
[
  [
    [
      [
        0,
        0,
      ],
      [
        10,
        0,
      ],
      [
        10,
        10,
      ],
      [
        0,
        10,
      ],
    ],
  ],
]
`;
